samples/_failures_safe/1761441310_a65e83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b22b24b.c: In function ‘main’:
./samples/SAFE/__tmp_2b22b24b.c:168:20: error: missing terminating " character
  168 |             printf("Invalid transition from current state
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2b22b24b.c:168:13: error: expected expression at end of input
  168 |             printf("Invalid transition from current state
      |             ^~~~~~
./samples/SAFE/__tmp_2b22b24b.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b22b24b.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b22b24b.c:168:13: error: expected declaration or statement at end of input
